# jims-rust-to-npm-test-registry-readme

./: .gitignore  Cargo.toml  README.md  README.registry.md
src/: main.rs
